AnalizadorLexico.jj
PARSER_BEGIN(lexer)
package Analizador;

import java.io.FileInputStream;
import java.io.FileNotFoundException;
import java.util.Dictionary;
import java.util.HashMap;
class lexer
{
   // public static ArrayList<Identificador> Identificadores = new ArrayList<>();
   public static HashMap<Integer,Identificador> tablaSimbolos = new HashMap<Integer,Identificador>();
   static int pos=0;
   static String modificadorTemp, tipoDatoTemp, nombreTemp, valorTemp;
   Identificador identificadores;
   static Token modificador;
   static Token tipoDato;
	public static void main(String[] args) throws ParseException, FileNotFoundException
	{
		try
		{
		  
			lexer analizador=new lexer(new FileInputStream("C:\\Users\\Power\\eclipse-workspace\\ProyectoAutomatas\\src\\Analizador\\prueba.txt"));
			//analizador.Start();
			analizador.programa();
			System.out.println("****************************************************************************************************");
			System.out.println("La cadena fue aceptada");
			System.out.println("Numero de Tokens:"+ tablaSimbolos.size());
			System.out.println("****************************************************************************************************");
			//Impresion Clase
			int posclase=tablaSimbolos.size()-1;
		System.out.println("Nombre: "+tablaSimbolos.get(posclase).getNombre()+
                        			", Tipo: "+tablaSimbolos.get(posclase).getTipo()+
                        			", Uso: "+tablaSimbolos.get(posclase).getUso()+
                        			", TipoDato: "+tablaSimbolos.get(posclase).getTipoDato()+
                        			", Modificador: "+tablaSimbolos.get(posclase).getModificador()+
                        			", Valor: "+tablaSimbolos.get(posclase).getValor());
              //Impresion de los demas Tokens
			  for ( int i = 0; i < tablaSimbolos.size()-1; i ++){
                        	System.out.println("Nombre: "+tablaSimbolos.get(i).getNombre()+
                        			", Tipo: "+tablaSimbolos.get(i).getTipo()+
                        			", Uso: "+tablaSimbolos.get(i).getUso()+
                        			", TipoDato: "+tablaSimbolos.get(i).getTipoDato()+
                        			", Modificador: "+tablaSimbolos.get(i).getModificador()+
                        			", Valor: "+tablaSimbolos.get(i).getValor());
                        }
			
		}
		catch(ParseException e)
		{
		  
			System.out.println(e.getMessage());
			//system.out.println("Se han encontrado errores, fall� al compilar");
		}
	}
}
PARSER_END(lexer)
/* Ignorados */
SKIP: {" " | "\t" | "\r" | "\n" }

/* Palabras Reservadas */
TOKEN :
{
< MODIFICADOR: "private" | "public" | "protected" >
| < CLASS: "class" >
| < TIPODATO: "boolean" | "int" | "double" | "string" >
| < IF: "if" >
| < ELSE: "else" >
| < ELSEIF: "else if" >
| < WHILE: "while" >
}

/* Separadores */
TOKEN :
{
  < PARENTESISIZQUIERDO: "(" >
| < PARENTESISDERECHO: ")" >
| < LLAVEIZQUIERDA: "{" >
| < LLAVEDERECHA: "}" >
| < PUNTOYCOMA: ";" >
| < COMILLASDOBLES: "\""> 
}


/* Operadores */
TOKEN :
{
  < ASIGNACION: "=" >
| < EXPRESION: ">" | "<" | "==" | "<=" | ">=" | "!=" >
| < MAS: "+" >
| < MENOS: "-" >
}

/* Literales */
TOKEN:
{
<INTEGER_LITERAL: ["1"-"9"] (["0"-"9"])* >
|<BOOLEAN_LITERAL: "false" | "true" >
|<DOUBLE_LITERAL : (["0"-"9"])+["."](["0"-"9"])+>
|<STRING_LITERAL: <COMILLASDOBLES>(~["\n","\r"])*<COMILLASDOBLES>>
}

/* Identificador */
TOKEN:
{
	< IDENTIFICADOR:(["a"-"z","_"])* >
}

/*===== Operadores Logicos  ======*/


void programa():{}{
  {
    Token nombre;
    Token modificador;
  }
	try{
	modificador=<MODIFICADOR> <CLASS> nombre=<IDENTIFICADOR> <LLAVEIZQUIERDA> (LOOKAHEAD(3)sentencia())* <LLAVEDERECHA>
	{
	 Identificador temp=new Identificador("","","","","","");
	  temp.setTipo("Clase");
      temp.setUso("Declaracion");
      temp.setTipoDato("No Aplica");
	  temp.setNombre(nombre.image);
	  temp.setModificador(modificador.image);
	  temp.setValor("No aplica");
	  tablaSimbolos.put(pos,temp);
	   pos++;
	}  
		
	}catch(ParseException e){
		System.out.println("Error de Sintaxis");
		System.out.println(e.toString());
	}
	
}
/*M�todos para field_declaration*/
void field_declaration():{}{
	variable_declaration()
}

void variable_declaration():{
	
  }{
	modificador=<MODIFICADOR> tipoDato=type() variable_declarator()<PUNTOYCOMA>
	{
	  Identificador tempgeneral=new Identificador("","","","","","");
	  //System.out.print(tipo.image+ " ");
	  //System.out.print(modificador.image+ " ");
	   tipoDatoTemp=tipoDato.image;
	  modificadorTemp=modificador.image;
	  tempgeneral.setTipo("Variable");
	  tempgeneral.setUso("Declaracion");
	  tempgeneral.setModificador(modificadorTemp);
	  tempgeneral.setTipoDato(tipoDatoTemp);
	  tempgeneral.setNombre(nombreTemp);
	  tempgeneral.setValor(valorTemp);
	   tablaSimbolos.put(pos,tempgeneral);
	   pos++;
	  //System.out.println("*************");
	  }
	  
}

Token type():{
	Token tipo;
  }{
	tipo=<TIPODATO>
	{
	  return tipo;
	}
}


void variable_declarator():{}{
  {
  Token identificador;
  Token valor;
  } 
	identificador=<IDENTIFICADOR> <ASIGNACION> (valor=<INTEGER_LITERAL> | valor=<BOOLEAN_LITERAL> | valor=<DOUBLE_LITERAL> | valor=<STRING_LITERAL>)
	{
	   //System.out.print(identificador.image + " ");
	   //System.out.print(valor.image + " ");
	   nombreTemp=identificador.image;
	   valorTemp=valor.image;

	}
}	

/*Metodos para sentencia*/
void sentencia():{}{
	variable_declaration()|if_todo()|while_sentencia()
}

void if_todo(): { } {
	<IF>if_sentencia()(else_if_sentencia())* [else_sentencia()]
}

void if_sentencia():{}{
	<PARENTESISIZQUIERDO>expression()<PARENTESISDERECHO> <LLAVEIZQUIERDA> (sentencia())* <LLAVEDERECHA>
}

void else_sentencia():{}{
	<ELSE><LLAVEIZQUIERDA> (sentencia())* <LLAVEDERECHA>
}
void else_if_sentencia():{}{
	<ELSEIF>if_sentencia()
}

void while_sentencia():{}{
	<WHILE><PARENTESISIZQUIERDO> expression() <PARENTESISDERECHO><LLAVEIZQUIERDA>(sentencia())*<LLAVEDERECHA>
}

void expression():{}{
	testing_expression()
}

void testing_expression():{}{
  {
   Token nombrecomparacion=null;
  }
	(<INTEGER_LITERAL> | nombrecomparacion=<IDENTIFICADOR>) <EXPRESION> (<INTEGER_LITERAL> | nombrecomparacion=<IDENTIFICADOR>)
	{
	 Identificador tempgeneral=new Identificador("","","","","","");
	 tempgeneral.setNombre(nombrecomparacion.image);
	 tempgeneral.setTipo("Variable");
     tempgeneral.setUso("Comparacion");
     tablaSimbolos.put(pos,tempgeneral);
	 pos++;
	}
}
